//
// Definições gRPC para envio de métricas
//

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.sd.grpc";
option java_outer_classname = "MetricsProto";

package metrics;

// Serviço GRPC
service MetricsService {
    rpc SendMetric(MetricRequest) returns (MetricResponse);
}

// Mensagem de request
message MetricRequest {
    string device_id = 1;
    double temperature = 2;
    double humidity = 3;
    string timestamp = 4;
}

// Mensagem de resposta
message MetricResponse {
    bool success = 1;
    string message = 2;
}
